Добавляет интерактивную карту, правит доступность

--- a/source/feedback.html
+++ b/source/feedback.html
@@ -45,7 +45,7 @@
                 <a>Форма отзыва</a>
               </li>
               <li class="site-list__item">
-                <a href="https://htmlacademy.ru">HTML Academy</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
               </li>
             </ul>
           </div>
@@ -92,7 +92,7 @@
               <h3 class="feedback__field-title">Контактная информация:</h3>
               <p class="feedback__input-field input-field input-field--tel">
                 <label class="input-field__label input-field__label--atop" for="tel"><span>Контактный</span> телефон*:</label>
-                <input class="input-field__string" id="tel" type="tel" name="Telephone" placeholder="Введите телефон">
+                <input class="input-field__string" id="tel" type="tel" minlength="6" name="Telephone" placeholder="Введите телефон">
                 <span class="input-field__icon">
                   <svg width="18" height="18">
                     <use xlink:href="#icon-phone"></use>
