--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
                 <a href="/feedback.html">Форма отзыва</a>
               </li>
               <li class="site-list__item">
-                <a href="https://htmlacademy.ru">HTML Academy</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
               </li>
             </ul>
           </div>
@@ -181,15 +181,9 @@
       <section class="location">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Расположение Седоны</h2>
-          <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.webp 1x, /img/bg-map-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.webp 1x, /img/bg-map-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="/img/bg-map-mobile@1x.webp 1x, /img/bg-map-mobile@2x.webp 2x">
-
-            <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg 1x, /img/bg-map-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg 1x, /img/bg-map-tablet@2x.jpg 2x">
-            <img class="location__map" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
-          </picture>
+          <div class="location__map">
+            <div class="location__google-maps"></div>
+          </div>
         </div>
       </section>
 
