--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="/css/style.min.css">
   <link rel="preload" href="/fonts/ptsans.woff2" as="font">
   <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
+  <link rel="manifest" href="/manifest/site.webmanifest">
 </head>
 
 <body>
