--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,6 @@
     </header>
 
     <main class="page-main">
-
       <section class="page-cover page-cover--main-page">
         <div class="page-cover__wrapper page-cover__wrapper--main-page">
           <div class="page-cover__image page-cover__image--main-page">
@@ -90,7 +89,6 @@
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.webp 1x, /img/main-city-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="/img/main-city-mobile@1x.webp 1x, /img/main-city-mobile@2x.webp 2x">
-
                   <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
                   <img src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
@@ -132,7 +130,6 @@
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.webp 1x, /img/main-bridge-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
                   <source type="image/webp" srcset="/img/main-bridge-mobile@1x.webp 1x, /img/main-bridge-mobile@2x.webp 2x">
-
                   <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
                   <img src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
@@ -180,15 +177,22 @@
           <a class="find-hotel__btn button" href="/hotel.html">Найти гостиницу</a>
         </div>
       </section>
-      <section class="location">
+      <section class="location location--nojs">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Расположение Седоны</h2>
           <div class="location__map">
+            <picture class="location__map-picture">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.webp 1x, /img/bg-map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.webp 1x, /img/bg-map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="/img/bg-map-mobile@1x.webp 1x, /img/bg-map-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg 1x, /img/bg-map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg 1x, /img/bg-map-tablet@2x.jpg 2x">
+              <img class="location__img" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
+            </picture>
             <div class="location__google-maps"></div>
           </div>
         </div>
       </section>
-
     </main>
 
     <footer class="page-footer">
