Переносит nojs картинку карты в фон

--- a/source/index.html
+++ b/source/index.html
@@ -180,15 +180,8 @@
       <section class="location location--nojs">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Расположение Седоны</h2>
+          <p class="location__a11y visually-hidden">Город лежит по обе стороны границы между округами Коконино и Явапай в северной части долины Верде штата Аризона.</p>
           <div class="location__map">
-            <picture class="location__map-picture">
-              <source type="image/webp" media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.webp 1x, /img/bg-map-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.webp 1x, /img/bg-map-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="/img/bg-map-mobile@1x.webp 1x, /img/bg-map-mobile@2x.webp 2x">
-              <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg 1x, /img/bg-map-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg 1x, /img/bg-map-tablet@2x.jpg 2x">
-              <img class="location__img" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
-            </picture>
             <div class="location__google-maps"></div>
           </div>
         </div>
