Превращает фотографии в article

--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -74,7 +74,7 @@
           <h2 class="visually-hidden">Галерея фотографий</h2>
           <ul class="photo-gallery__tiles">
             <li class="photo-gallery__tile photo-gallery__tile--wide">
-              <div class="photo-gallery__item photo-item">
+              <article class="photo-gallery__item photo-item">
                 <a class="photo-item__link" href="/img/photo-sunset-desktop@2x.jpg" title="Полная версия фотографии «Закат»">
                   <picture>
                     <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.webp 1x, /img/photo-sunset-desktop@2x.webp 2x">
@@ -99,10 +99,10 @@
                     <span class="visually-hidden">Нравится</span>
                   </button>
                 </div>
-              </div>
+              </article>
             </li>
             <li class="photo-gallery__tile">
-              <div class="photo-gallery__item photo-item">
+              <article class="photo-gallery__item photo-item">
                 <a class="photo-item__link" href="/img/photo-cactus-desktop@2x.jpg" title="Полная версия фотографии «Кактус»">
                   <picture>
                     <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.webp 1x, /img/photo-cactus-desktop@2x.webp 2x">
@@ -127,10 +127,10 @@
                     <span class="visually-hidden">Нравится</span>
                 </button>
                 </div>
-              </div>
+              </article>
             </li>
             <li class="photo-gallery__tile">
-              <div class="photo-gallery__item photo-item">
+              <article class="photo-gallery__item photo-item">
                 <a class="photo-item__link" href="/img/photo-roads-desktop@2x.jpg" title="Полная версия фотографии «Дороги»">
                   <picture>
                     <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.webp 1x, /img/photo-roads-desktop@2x.webp 2x">
@@ -155,10 +155,10 @@
                     <span class="visually-hidden">Нравится</span>
                   </button>
                 </div>
-              </div>
+              </article>
             </li>
             <li class="photo-gallery__tile">
-              <div class="photo-gallery__item photo-item">
+              <article class="photo-gallery__item photo-item">
                 <a class="photo-item__link" href="/img/photo-bridge-desktop@2x.jpg" title="Полная версия фотографии «Мост»">
                   <picture>
                     <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.webp 1x, /img/photo-bridge-desktop@2x.webp 2x">
@@ -182,7 +182,7 @@
                     <span class="visually-hidden">Нравится</span>
                   </button>
                 </div>
-              </div>
+              </article>
             </li>
           </ul>
         </div>
