--- a/source/feedback.html
+++ b/source/feedback.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <title>Седона — Форма отзыва</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/style.min.css">
-  <link rel="preload" href="/fonts/ptsans.woff2" as="font">
-  <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="manifest" href="/manifest/site.webmanifest">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="manifest" href="manifest/site.webmanifest">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" href="/">
+        <a class="page-header__logo" href="">
           <picture>
-            <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-            <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </picture>
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -38,10 +38,10 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item">
-                <a href="/">Главная</a>
+                <a href="index.html">Главная</a>
               </li>
               <li class="site-list__item">
-                <a href="/photo-and-video.html">Фото и видео</a>
+                <a href="photo-and-video.html">Фото и видео</a>
               </li>
               <li class="site-list__item site-list__item--active">
                 <a>Форма отзыва</a>
@@ -60,7 +60,7 @@
       <section class="page-cover">
         <div class="page-cover__wrapper page-cover__wrapper--forms">
           <div class="page-cover__image page-cover__image--secondary-page">
-            <img class="page-cover__logo" src="/img/text-sedona.svg" width="229" height="39" alt="SEDONA">
+            <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
           </div>
           <h1 class="page-cover__title page-cover__title--secondary-page">Оставьте свой отзыв</h1>
           <p class="page-cover__description">
@@ -232,8 +232,8 @@
       </div>
     </footer>
   </div>
-  <script src="/js/picturefill.min.js"></script>
-  <script src="/js/script.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
