--- a/source/index.html
+++ b/source/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <title>Седона — Главная страница</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/style.min.css">
-  <link rel="preload" href="/fonts/ptsans.woff2" as="font">
-  <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="manifest" href="/manifest/site.webmanifest">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="manifest" href="manifest/site.webmanifest">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
       <div class="page-header__wrapper">
         <a class="page-header__logo">
           <picture>
-            <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-            <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </picture>
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -41,10 +41,10 @@
                 <a>Главная</a>
               </li>
               <li class="site-list__item">
-                <a href="/photo-and-video.html">Фото и видео</a>
+                <a href="photo-and-video.html">Фото и видео</a>
               </li>
               <li class="site-list__item">
-                <a href="/feedback.html">Форма отзыва</a>
+                <a href="feedback.html">Форма отзыва</a>
               </li>
               <li class="site-list__item">
                 <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
@@ -59,7 +59,7 @@
       <section class="page-cover page-cover--main-page">
         <div class="page-cover__wrapper page-cover__wrapper--main-page">
           <div class="page-cover__image page-cover__image--main-page">
-            <img class="page-cover__logo" src="/img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
+            <img class="page-cover__logo" src="img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
           </div>
           <h1 class="page-cover__title">
             Седона – небольшой городок в Аризоне, заслуживающий большего!
@@ -86,12 +86,12 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.webp 1x, /img/main-city-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/main-city-mobile@1x.webp 1x, /img/main-city-mobile@2x.webp 2x">
-                  <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
-                  <img src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, /img/main-city-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, /img/main-city-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
+                  <img src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
                 </picture>
               </div>
               <ul class="features__container recommended-list">
@@ -127,12 +127,12 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.webp 1x, /img/main-bridge-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/main-bridge-mobile@1x.webp 1x, /img/main-bridge-mobile@2x.webp 2x">
-                  <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
-                  <img src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, /img/main-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, /img/main-bridge-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
+                  <img src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
                 </picture>
               </div>
             </li>
@@ -174,7 +174,7 @@
           <p class="find-hotel__offer main-offer">
             Укажите предполагаемые даты поездки,<span>&nbsp;</span><br>и мы покажем вам лучшие предложения гостиниц в седоне
           </p>
-          <a class="find-hotel__btn button" href="/hotel.html">Найти гостиницу</a>
+          <a class="find-hotel__btn button" href="hotel.html">Найти гостиницу</a>
         </div>
       </section>
       <section class="location location--nojs">
@@ -234,8 +234,8 @@
       </div>
     </footer>
   </div>
-  <script src="/js/picturefill.min.js"></script>
-  <script src="/js/script.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
