--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <title>Седона — Фото и Видео</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/style.min.css">
-  <link rel="preload" href="/fonts/ptsans.woff2" as="font">
-  <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
-  <link rel="manifest" href="/manifest/site.webmanifest">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
+  <link rel="manifest" href="manifest/site.webmanifest">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" href="/">
+        <a class="page-header__logo" href="">
           <picture>
-            <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-            <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </picture>
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -38,13 +38,13 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item">
-                <a href="/">Главная</a>
+                <a href="index.html">Главная</a>
               </li>
               <li class="site-list__item site-list__item--active">
                 <a>Фото и видео</a>
               </li>
               <li class="site-list__item">
-                <a href="/feedback.html">Форма отзыва</a>
+                <a href="feedback.html">Форма отзыва</a>
               </li>
               <li class="site-list__item">
                 <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
@@ -60,7 +60,7 @@
       <section class="page-cover">
         <div class="page-cover__wrapper page-cover__wrapper--photo">
           <div class="page-cover__image page-cover__image--secondary-page">
-            <img class="page-cover__logo" src="/img/text-sedona.svg" width="229" height="39" alt="SEDONA">
+            <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
           </div>
           <h1 class="page-cover__title page-cover__title--secondary-page">Фото и видео</h1>
           <p class="page-cover__description">
@@ -75,14 +75,14 @@
           <ul class="photo-gallery__tiles">
             <li class="photo-gallery__tile photo-gallery__tile--wide">
               <article class="photo-gallery__item photo-item">
-                <a class="photo-item__link" href="/img/photo-sunset-desktop@2x.jpg" title="Полная версия фотографии «Закат»">
+                <a class="photo-item__link" href="img/photo-sunset-desktop@2x.jpg" title="Полная версия фотографии «Закат»">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.webp 1x, /img/photo-sunset-desktop@2x.webp 2x">
-                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.webp 1x, /img/photo-sunset-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="/img/photo-sunset-mobile@1x.webp 1x, /img/photo-sunset-mobile@2x.webp 2x">
-                    <source media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.jpg 1x, /img/photo-sunset-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.jpg 1x, /img/photo-sunset-tablet@2x.jpg 2x">
-                    <img src="/img/photo-sunset-mobile@1x.jpg" srcset="/img/photo-sunset-mobile@2x.jpg 2x" alt="Закат">
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, /img/photo-sunset-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, /img/photo-sunset-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, /img/photo-sunset-mobile@2x.webp 2x">
+                    <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, /img/photo-sunset-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, /img/photo-sunset-tablet@2x.jpg 2x">
+                    <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат">
                   </picture>
                 </a>
                 <div class="photo-item__footer">
@@ -103,14 +103,14 @@
             </li>
             <li class="photo-gallery__tile">
               <article class="photo-gallery__item photo-item">
-                <a class="photo-item__link" href="/img/photo-cactus-desktop@2x.jpg" title="Полная версия фотографии «Кактус»">
+                <a class="photo-item__link" href="img/photo-cactus-desktop@2x.jpg" title="Полная версия фотографии «Кактус»">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.webp 1x, /img/photo-cactus-desktop@2x.webp 2x">
-                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.webp 1x, /img/photo-cactus-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="/img/photo-cactus-mobile@1x.webp 1x, /img/photo-cactus-mobile@2x.webp 2x">
-                    <source media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.jpg 1x, /img/photo-cactus-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.jpg 1x, /img/photo-cactus-tablet@2x.jpg 2x">
-                    <img src="/img/photo-cactus-mobile@1x.jpg" srcset="/img/photo-cactus-mobile@2x.jpg 2x" alt="Кактус">
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, /img/photo-cactus-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, /img/photo-cactus-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, /img/photo-cactus-mobile@2x.webp 2x">
+                    <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, /img/photo-cactus-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, /img/photo-cactus-tablet@2x.jpg 2x">
+                    <img src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Кактус">
                   </picture>
                 </a>
                 <div class="photo-item__footer">
@@ -131,14 +131,14 @@
             </li>
             <li class="photo-gallery__tile">
               <article class="photo-gallery__item photo-item">
-                <a class="photo-item__link" href="/img/photo-roads-desktop@2x.jpg" title="Полная версия фотографии «Дороги»">
+                <a class="photo-item__link" href="img/photo-roads-desktop@2x.jpg" title="Полная версия фотографии «Дороги»">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.webp 1x, /img/photo-roads-desktop@2x.webp 2x">
-                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.webp 1x, /img/photo-roads-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="/img/photo-roads-mobile@1x.webp 1x, /img/photo-roads-mobile@2x.webp 2x">
-                    <source media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.jpg 1x, /img/photo-roads-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.jpg 1x, /img/photo-roads-tablet@2x.jpg 2x">
-                    <img src="/img/photo-roads-mobile@1x.jpg" srcset="/img/photo-roads-mobile@2x.jpg 2x" alt="Дороги">
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, /img/photo-roads-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, /img/photo-roads-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, /img/photo-roads-mobile@2x.webp 2x">
+                    <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, /img/photo-roads-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, /img/photo-roads-tablet@2x.jpg 2x">
+                    <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дороги">
                   </picture>
                 </a>
                 <div class="photo-item__footer">
@@ -159,14 +159,14 @@
             </li>
             <li class="photo-gallery__tile">
               <article class="photo-gallery__item photo-item">
-                <a class="photo-item__link" href="/img/photo-bridge-desktop@2x.jpg" title="Полная версия фотографии «Мост»">
+                <a class="photo-item__link" href="img/photo-bridge-desktop@2x.jpg" title="Полная версия фотографии «Мост»">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.webp 1x, /img/photo-bridge-desktop@2x.webp 2x">
-                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.webp 1x, /img/photo-bridge-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="/img/photo-bridge-mobile@1x.webp 1x, /img/photo-bridge-mobile@2x.webp 2x">
-                    <source media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.jpg 1x, /img/photo-bridge-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.jpg 1x, /img/photo-bridge-tablet@2x.jpg 2x">
-                    <img src="/img/photo-bridge-mobile@1x.jpg" srcset="/img/photo-bridge-mobile@2x.jpg 2x" alt="Мост">
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, /img/photo-bridge-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, /img/photo-bridge-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, /img/photo-bridge-mobile@2x.webp 2x">
+                    <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, /img/photo-bridge-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, /img/photo-bridge-tablet@2x.jpg 2x">
+                    <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост">
                   </picture>
                 </a>
                 <div class="photo-item__footer">
@@ -194,12 +194,12 @@
           <h3 class="video__question main-question">Все еще сомневаетесь?</h3>
           <p class="video__main-offer main-offer">Смотрите видеопрезентацию и скорее за билетами, пока<span>&nbsp;</span><br>они не подорожали в очередной раз!</p>
           <picture class="video__image">
-            <source type="image/webp" media="(min-width: 1200px)" srcset="/img/video-desktop@1x.webp 1x, /img/video-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="/img/video-tablet@1x.webp 1x, /img/video-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="/img/video-mobile@1x.webp 1x, /img/video-mobile@2x.webp 2x">
-            <source media="(min-width: 1200px)" srcset="/img/video-desktop@1x.jpg 1x, /img/video-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="/img/video-tablet@1x.jpg 1x, /img/video-tablet@2x.jpg 2x">
-            <img src="/img/video-mobile@1x.jpg" srcset="/img/video-mobile@2x.jpg 2x" alt="Видео">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, /img/video-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, /img/video-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, /img/video-mobile@2x.webp 2x">
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, /img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, /img/video-tablet@2x.jpg 2x">
+            <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Видео">
           </picture>
           <div class="video__controls-wrapper">
             <button class="video__control video__replay-btn">
@@ -279,8 +279,8 @@
       </div>
     </footer>
   </div>
-  <script src="/js/picturefill.min.js"></script>
-  <script src="/js/script.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
