Исправляет относительные ссылки на картинки

--- a/source/index.html
+++ b/source/index.html
@@ -86,11 +86,11 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, /img/main-city-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, /img/main-city-mobile@2x.webp 2x">
-                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
                   <img src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
                 </picture>
               </div>
@@ -127,11 +127,11 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, /img/main-bridge-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, /img/main-bridge-mobile@2x.webp 2x">
-                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, img/main-bridge-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
                   <img src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
                 </picture>
               </div>
